# py_ref

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  RELEASE.md  prompt.md
scripts/: check.py
src/py_ref/: __init__.py  api.py  core.py  logger.py  main.py
tests/: conftest.py  test_api.py  test_core.py  test_logger.py  test_main.py  test_package.py
